project is ready

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>🌷My PoC 🌈</title>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="app"></canvas>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
